[gd_scene load_steps=2 format=3 uid="uid://c206pkgkcyeq6"]

[ext_resource type="Script" uid="uid://cducv1500wtn7" path="res://scripts/dead_zones.gd" id="1_yvlyr"]

[node name="DeadZones" type="Area2D"]
collision_mask = 2
script = ExtResource("1_yvlyr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
